Fixed dependencies and added env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - CLOUDAMQP_PASS=${CLOUDAMQP_PASS}
             - CLOUDAMQP_VHOST=${CLOUDAMQP_VHOST}
             - MAX_MSG_QUEUE=${MAX_MSG_QUEUE}
+            - EXCHANGE=${EXCHANGE}
         volumes:
             - ./php-producer:/opt/app
     php_consumer:
@@ -32,6 +33,7 @@ services:
             - CLOUDAMQP_USER=${CLOUDAMQP_USER}
             - CLOUDAMQP_PASS=${CLOUDAMQP_PASS}
             - CLOUDAMQP_VHOST=${CLOUDAMQP_VHOST}
+            - EXCHANGE=${EXCHANGE}
         volumes:
             - ./php-consumer:/opt/app
 networks:
