Added feature to send settings and receive msg

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,9 @@ services:
             - CLOUDAMQP_USER=${CLOUDAMQP_USER}
             - CLOUDAMQP_PASS=${CLOUDAMQP_PASS}
             - CLOUDAMQP_VHOST=${CLOUDAMQP_VHOST}
+            - MAX_MSG_QUEUE=${MAX_MSG_QUEUE}
             - EXCHANGE=${EXCHANGE}
+            - MSG_BATCH_AMOUNT=${MSG_BATCH_AMOUNT}
         volumes:
             - ./php-consumer:/opt/app
 networks:
