--- a/php-consumer/config/services.yaml
+++ b/php-consumer/config/services.yaml
@@ -14,9 +14,38 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    Consumer\:
+    App\:
         resource: '../src/*'
         exclude: '../src/{Kernel.php}'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    ## AMQP
+    ##########
+    PhpAmqpLib\Connection\AMQPStreamConnection:
+        arguments:
+            $host: '%env(CLOUDAMQP_HOST)%'
+            $port: '%env(CLOUDAMQP_PORT)%'
+            $user: '%env(CLOUDAMQP_USER)%'
+            $password: '%env(CLOUDAMQP_PASS)%'
+            $vhost: '%env(CLOUDAMQP_VHOST)%'
+
+
+    ## AMQP Factory
+    ##########
+    App\Consumer\Infrastructure\Messenger\AMQP\Factory\QueueFactory:
+        arguments:
+            $maxMessagesPerQueue: '%env(MAX_MSG_QUEUE)%'
+
+
+    ## CLI
+    ##########
+    App\Consumer\Infrastructure\Ui\CLI\ConsumeMessages:
+        arguments:
+            $channelManager: '@App\Consumer\Infrastructure\Messenger\AMQP\ChannelManager'
+            $queueFactory: '@App\Consumer\Infrastructure\Messenger\AMQP\Factory\QueueFactory'
+
+    App\Consumer\Infrastructure\Ui\CLI\ProcessQueue:
+        arguments:
+            $messagesBatchSize: '%env(MSG_BATCH_AMOUNT)%'
